--- a/laravel/5.4/Dockerfile
+++ b/laravel/5.4/Dockerfile
@@ -14,7 +14,7 @@ RUN apt update \
             pdo \
             pdo_pgsql \
             pgsql
-
+RUN pecl install xdebug-2.5.5 && docker-php-ext-enable xdebug
 WORKDIR /var/www/laravel_docker
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
