--- a/laravel/5.4/Makefile
+++ b/laravel/5.4/Makefile
@@ -6,6 +6,10 @@ build:
 up:
 	docker-compose up -d
 
+.PHONY: restart
+restart:
+	docker-compose restart
+
 .PHONY: console
 console:
 	docker-compose exec php-apache /bin/bash
