--- a/laravel/5.4/Dockerfile
+++ b/laravel/5.4/Dockerfile
@@ -18,3 +18,6 @@ RUN pecl install xdebug-2.5.5 && docker-php-ext-enable xdebug
 WORKDIR /var/www/laravel_docker
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN apt install -y vim
+
+ADD docker-php-ext-xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
