--- a/laravel/9.8/docker-php-ext-xdebug.ini
+++ b/laravel/9.8/docker-php-ext-xdebug.ini
@@ -1,7 +1,8 @@
-zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/xdebug.so
+zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20210902/xdebug.so
 
-xdebug.remote_host = "host.docker.internal"
-xdebug.remote_autostart = 1
-xdebug.remote_enable = 1
-xdebug.remote_port = 9000
-xdebug.idekey = my_project_idekey
+xdebug.client_host=host.docker.internal
+xdebug.client_port=9000
+xdebug.mode=debug
+
+#xdebug.idekey = PHPSTORM
+xdebug.start_with_request=yes
