--- a/laravel/inertia/composer.json
+++ b/laravel/inertia/composer.json
@@ -13,6 +13,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "phpstan/phpdoc-parser": "^2.2",
         "spatie/enum": "^3.13",
         "spatie/laravel-data": "^4.17",
         "spatie/laravel-typescript-transformer": "^2.5",
